; ModuleID = '/home/carl/AnghaBench/git/extr_archive.c_check_attr_export_ignore.c'
source_filename = "/home/carl/AnghaBench/git/extr_archive.c_check_attr_export_ignore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.attr_check = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.attr_check*)* @check_attr_export_ignore to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_attr_export_ignore(%struct.attr_check* %0) #0 {
  %2 = alloca %struct.attr_check*, align 8
  store %struct.attr_check* %0, %struct.attr_check** %2, align 8
  %3 = load %struct.attr_check*, %struct.attr_check** %2, align 8
  %4 = icmp ne %struct.attr_check* %3, null
  br i1 %4, label %5, label %14

5:                                                ; preds = %1
  %6 = load %struct.attr_check*, %struct.attr_check** %2, align 8
  %7 = getelementptr inbounds %struct.attr_check, %struct.attr_check* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i64 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @ATTR_TRUE(i32 %11)
  %13 = icmp ne i64 %12, 0
  br label %14

14:                                               ; preds = %5, %1
  %15 = phi i1 [ false, %1 ], [ %13, %5 ]
  %16 = zext i1 %15 to i32
  ret i32 %16
}

declare dso_local i64 @ATTR_TRUE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
